# scientific-coding-bench

./: .gitignore  AGENTS.md  README.md  agents_default.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: benchmark-result.md
.github/workflows/: ci.yml  toolchain-image.yml
benchmarks/demo/cpp-rk2-001/workspace/src/: main.cpp
benchmarks/demo/cpp/eval/tests/: test_hidden.py
benchmarks/demo/cpp/workspace/: CMakeLists.txt
benchmarks/demo/cpp/workspace/tests/: test_public.py
benchmarks/demo/f90-rk2-001/workspace/src/: main.f90
benchmarks/demo/f90/eval/tests/: test_hidden.py
benchmarks/demo/f90/workspace/: CMakeLists.txt
benchmarks/demo/f90/workspace/tests/: test_public.py
benchmarks/demo/py-add-001/: spec.md  task.json
benchmarks/demo/py-add-001/eval/: run.sh
benchmarks/demo/py-add-001/eval/tests/: test_hidden.py
benchmarks/demo/py-add-001/workspace/: README.md  pyproject.toml
benchmarks/demo/py-add-001/workspace/src/: add.py
benchmarks/demo/py-add-001/workspace/tests/: test_public.py
benchmarks/magnetohydrodynamics/: README.md
benchmarks/magnetohydrodynamics/cpp-full-solver1d/: spec.md
benchmarks/magnetohydrodynamics/cpp-full-solver1d/eval/tests/: test_hidden.py
benchmarks/magnetohydrodynamics/cpp-full-solver1d/workspace/: CMakeLists.txt  README.md
benchmarks/magnetohydrodynamics/cpp-full-solver1d/workspace/src/: main.cpp  (+2 more)
benchmarks/magnetohydrodynamics/cpp-hlld/: spec.md  task.toml
benchmarks/magnetohydrodynamics/shared/: CMakeLists.txt  README.md
benchmarks/magnetohydrodynamics/shared/eval/: README.md
benchmarks/magnetohydrodynamics/shared/eval/fixtures/mhd1d/: brio_wu_fixture.json
benchmarks/magnetohydrodynamics/shared/src/: full_main.cpp  full_mhd1d.cpp  full_mhd1d.hpp  hlld.cpp  hlld.hpp
benchmarks/magnetohydrodynamics/shared/tests/: test_reference.py
benchmarks/magnetohydrodynamics/shared/workspace/: hlld.md
benchmarks/wave-equation-3d/: README.md
benchmarks/wave-equation-3d/cpp-fd3d/: spec.md  task.toml
benchmarks/wave-equation-3d/cpp/workspace/: CMakeLists.txt
benchmarks/wave-equation-3d/f90-fd3d/: spec.md  task.toml
benchmarks/wave-equation-3d/f90/workspace/: CMakeLists.txt
benchmarks/wave-equation-3d/py-fd3d/: spec.md  task.toml
benchmarks/wave-equation-3d/shared/workspace/: description.md
docker/: Dockerfile
docs/: development.md  run-flow.md  task-development.md  task-reference.md  toolchain.md
runner/: bench.py  publish_helpers.py  run_record_helpers.py  stream_pretty.py
sample/: copilot-smoke.toml  opencode.toml
scripts/: build_image.py  publish_issue.py
test-tasks/smoke/py/: task.toml
tests/: test_execution_agent_adversarial.py  test_fixture_path_relocation.py  test_import_compatibility.py  test_publish_issue_script.py  test_runner_bench.py  test_runner_bench_adversarial.py  test_runner_cli_flow.py  test_runner_helpers.py  test_runner_publish_helpers.py  test_runner_results_helpers.py  test_runner_run_record_helpers.py  test_runner_seam_adversarial.py  test_runner_task_loading_adversarial.py
tests/fixtures/agent_streams/: README.md  claude_smoke.stdout.txt  codex_smoke.stderr.txt  codex_smoke.stdout.txt
(+12 files in other folders)
